Finish user signup

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -112,10 +112,10 @@ footer {
   @include box_sizing;
 }
 
-// SIEEBAR
+// SIDEBAR
 
 aside {
-  background-color: yellow;
+  // background-color: yellow;
   section.user_info {
     margin-top: 20px;
   }
