--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= render 'layouts/header' %></rend>
     <div class="container">
       <% flash.each do |msg_type, msg| %>
-        <div class="alert-<%= msg_type %>"><%= msg %></div>
+        <%= content_tag(:div, msg, class: "alert alert-#{msg_type}") %>
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
