Add viewport meta tag to application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= full_title(yield :title) %></title>
     <%= favicon_link_tag 'ruby.png', rel: 'shortcut icon apple-touch-icon', type: 'image/png' %>
     <%= csrf_meta_tags %>
