--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -191,3 +191,18 @@ input {
   width: auto;
   margin-left: 0;
 }
+
+// USERS INDEX
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px;
+    border-bottom: 1px solid $gray-lighter;
+    .gravatar {
+      width: 50px;
+    }
+  }
+}
