--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,10 @@
 <% provide(:title, 'All Users')%>
 <h1>All Users</h1>
 
-<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+<%= will_paginate %>
 
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, size: 100 %>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
+  <%= render @users %>
 </ul>
 
-<%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+<%= will_paginate %>
